kube-pilot/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubepilot-service
spec:
  selector:
    app: kubepilot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
